feat: add avatar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <section>
-
+            <img src="/img/avatar.jpeg" alt="my avatar">
         </section>
     </main>
 </body>
